--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FindMoviesApplication">
-        <activity android:name=".RecyclerItemDetailActivity"></activity>
+        <activity android:name=".TestRecyclerFromDbActivity">
+        </activity>
+        <activity android:name=".RecyclerItemDetailActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
